--- a/src/main/resources/templates/shopping-cart.html
+++ b/src/main/resources/templates/shopping-cart.html
@@ -45,6 +45,9 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <form th:action="@{'/products/removeFromCart/' + ${product.key.id}}" th:method="POST" class="remove-button">
+                                        <button class="btn btn-danger btn-sm">X</button>
+                                    </form>
                                 </div>
                             </div>
                         </div>
