--- a/src/main/resources/templates/successful-order.html
+++ b/src/main/resources/templates/successful-order.html
@@ -6,28 +6,11 @@
 <body>
 <header th:replace="~{fragments/commons::nav}"></header>
 <main>
-    <div class="container mt-5 d-flex justify-content-center">
-        <div class="card p-4 mt-3">
-            <div class="first d-flex justify-content-between align-items-center mb-3">
-                <div class="info">
-                    <span class="d-block name">Thank you, Alex</span>
-                    <span class="order">Order - 4554645</span>
-
-                </div>
-
-                <img src="https://i.imgur.com/NiAVkEw.png" width="40"/>
-
-
-            </div>
-            <div class="detail">
-                <span class="d-block summery">Your order has been dispatched. We are delivering you order.</span>
-            </div>
-            <hr>
-            <div class="text">
-                <span class="d-block new mb-1">Alex Dorlew</span>
-            </div>
-            <span class="d-block address mb-3">672 Conaway Street Bryantiville Massachusetts 02327</span>
-        </div>
+    <div class="container">
+        <div class="success-message">Order Sent Successfully</div>
+        <div class="icon-check">&#10004;</div>
+        <p class="lead">Thank you for your order. You will receive a confirmation shortly.</p>
+        <a href="/" class="btn btn-primary">Back to Home</a>
     </div>
 </main>
 <footer th:replace="~{fragments/commons::footer}"></footer>
