--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -14,17 +14,12 @@ body {
     margin: 50px auto 0;
 }
 
-.form-heading {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
 .content {
     flex: 1;
 }
 
 .container {
-    margin-top: 83.5px;
+    margin-top: 84px;
 }
 
 footer {
@@ -34,21 +29,16 @@ footer {
     margin-top: auto;
 }
 
-.product-category,
-.product-container {
-    max-width: 400px;
-    margin: 20px;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-}
-
 .product-category img,
 .product-container img {
     max-width: 100%;
     height: 275px;
     border-radius: 5px;
     margin-bottom: 10px;
+}
+
+.product-container {
+    margin: 15px;
 }
 
 textarea {
@@ -127,11 +117,6 @@ select#subjectFilter option {
     text-transform: none;
 }
 
-.cart-container {
-    margin: 0;
-    padding: 0;
-}
-
 .table-image thead td,
 .table-image thead th,
 .table-image td,
@@ -147,17 +132,9 @@ select#subjectFilter option {
     text-align: center;
 }
 
-.table-image td.qty {
-    max-width: 2rem;
-}
-
 .price {
     margin-left: 1rem;
     padding-left: 0;
-}
-
-.modal-footer {
-    padding-top: 0rem;
 }
 
 .cart-container .btn {
@@ -174,9 +151,9 @@ body {
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
-    z-index: 1000; /* Adjust the z-index as needed to ensure it appears above other elements */
+    z-index: 1000;
     opacity: 1;
-    animation: fadeOut 8s forwards; /* Adjust the duration as needed */
+    animation: fadeOut 8s forwards;
 }
 
 @keyframes fadeOut {
@@ -189,9 +166,7 @@ body {
     }
 }
 
-
-
-.shopping-cart{
+.shopping-cart {
     padding-bottom: 50px;
     font-family: 'Montserrat', sans-serif;
 }
@@ -200,70 +175,70 @@ body {
     margin-top: 0px;
 }
 
-.shopping-cart .content{
+.shopping-cart .content {
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
     background-color: white;
 }
 
-.shopping-cart .block-heading{
+.shopping-cart .block-heading {
     padding-top: 50px;
     margin-bottom: 40px;
     text-align: center;
 }
 
-.shopping-cart .block-heading p{
+.shopping-cart .block-heading p {
     text-align: center;
     max-width: 420px;
     margin: auto;
-    opacity:0.7;
+    opacity: 0.7;
 }
 
-.shopping-cart .dark .block-heading p{
-    opacity:0.8;
+.shopping-cart .dark .block-heading p {
+    opacity: 0.8;
 }
 
 .shopping-cart .block-heading h1,
 .shopping-cart .block-heading h2,
 .shopping-cart .block-heading h3 {
-    margin-bottom:1.2rem;
+    margin-bottom: 1.2rem;
     color: #3b99e0;
 }
 
-.shopping-cart .items{
+.shopping-cart .items {
     margin: auto;
 }
 
-.shopping-cart .items .product{
+.shopping-cart .items .product {
     margin-bottom: 20px;
     padding-top: 20px;
     padding-bottom: 20px;
     margin-left: 20px;
 }
 
-.shopping-cart .items .product .info{
+.shopping-cart .items .product .info {
     padding-top: 0px;
     text-align: center;
 }
 
-.shopping-cart .items .product .info .product-name{
+.shopping-cart .items .product .info .product-name {
     font-weight: 600;
 }
 
-.shopping-cart .items .product .info .product-name .product-info{
+.shopping-cart .items .product .info .product-name .product-info {
     font-size: 14px;
     margin-top: 15px;
 }
 
-.shopping-cart .items .product .info .product-name .product-info .value{
+.shopping-cart .items .product .info .product-name .product-info .value {
     font-weight: 400;
 }
 
-.shopping-cart .items .product .info .quantity .quantity-input{
+.shopping-cart .items .product .info .quantity .quantity-input {
     margin: auto;
     width: 80px;
 }
 
-.shopping-cart .items .product .info .price{
+.shopping-cart .items .product .info .price {
     margin-top: 15px;
     font-weight: bold;
     font-size: 22px;
@@ -273,14 +248,14 @@ body {
     margin: 24px 24px 0 0;
 }
 
-.shopping-cart .summary{
+.shopping-cart .summary {
     border-top: 3px solid #5ea4f3;
     background-color: #f7fbff;
     height: 100%;
     padding: 30px;
 }
 
-.shopping-cart .summary h3{
+.shopping-cart .summary h3 {
     text-align: center;
     font-size: 1.3em;
     font-weight: 600;
@@ -288,23 +263,23 @@ body {
     padding-bottom: 20px;
 }
 
-.shopping-cart .summary .summary-item{
+.shopping-cart .summary .summary-item {
     padding-bottom: 10px;
     padding-top: 10px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-.shopping-cart .summary .text{
+.shopping-cart .summary .text {
     font-size: 1em;
     font-weight: 600;
 }
 
-.shopping-cart .summary .price{
+.shopping-cart .summary .price {
     font-size: 1em;
     float: right;
 }
 
-.shopping-cart .summary button{
+.shopping-cart .summary button {
     margin-top: 20px;
 }
 
@@ -323,6 +298,7 @@ body {
     .shopping-cart .items .product .info .quantity {
         text-align: center;
     }
+
     .shopping-cart .items .product .info .quantity .quantity-input {
         padding: 4px 10px;
         text-align: center;
@@ -333,93 +309,69 @@ body {
     max-width: 960px;
 }
 
-.checkout-form {
-    width: 960px;
-}
-
-.lh-condensed { line-height: 1.25; }
-
-
-
-
-body{
+body {
     background-color: #eee;
 }
-.card{
+
+.card {
     background-color: #fff;
     width: 300px;
     border: none;
     border-radius: 16px;
-
 }
 
-.info{
+.most-bought {
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    overflow: hidden;
+    transition: transform 0.3s;
+    margin-bottom: 20px;
+}
+
+.most-bought:hover {
+    transform: scale(1.05);
+}
+
+.card-body {
+    padding: 15px;
+}
+
+.card-title {
+    font-size: 1.2em;
+    margin-bottom: 10px;
+}
+
+.card-text {
+    font-size: 1em;
+    color: #777;
+}
+
+img {
+    max-width: 100%;
+    max-height: 200px;
+    height: auto;
+    border-bottom: 1px solid #ddd;
+}
+
+.info {
     line-height: 19px;
 }
 
-.name{
+.name {
     color: #4c40e0;
     font-size: 18px;
     font-weight: 600;
 }
 
-.order{
-    font-size: 14px;
-    font-weight: 400;
-    color: #b7b5b5;
-}
-.detail{
-
-    line-height:19px;
+.text {
+    line-height: 15px;
 }
 
-.summery{
-
-
-    color: #d2cfcf;
-    font-weight: 400;
-    font-size: 13px;
-}
-
-
-
-.text{
-
-    line-height:15px;
-}
-.new{
-
+.new {
     color: #000;
     font-size: 14px;
     font-weight: 600;
 }
-.money{
-
-
-    font-size: 14px;
-    font-weight:500;
-}
-.address{
-
-    color: #d2cfcf;
-    font-weight:500;
-    font-size:14px;
-}
-
-.last{
-
-    font-size: 10px;
-    font-weight: 500;
-
-}
-
-
-.address-line{
-    color: #4C40E0;
-    font-size: 11px;
-    font-weight: 700;
-}
-
 
 .success-message {
     color: #28a745;
@@ -432,3 +384,4 @@ body{
     color: #28a745;
     font-size: 50px;
 }
+
