--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,32 +1,149 @@
 body {
-    background-color: #f8f9fa;
+    background-image: url('img/img_1.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
 }
 
+.container {
+    max-width: 960px;
+}
+
+body::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
+    z-index: -1;
+}
+
 .custom-form {
     max-width: 400px;
-    background-color: #ffffff;
+    background-color: #b69cd9;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin: 50px auto 0;
 }
 
+.custom-form, .nav-link {
+    color: #f5f0fc;
+}
+
+.dropdown-menu {
+    z-index: 9999;
+}
+
+tr .btn {
+    width: 95px;
+    margin: 5px;
+}
+
+.btn-dark {
+    background-color: #544569;
+}
+
+.popup h2 {
+    color: #544569;
+}
+
 .content {
     flex: 1;
+}
+
+.square-image {
+    width: 250px;
+    height: auto;
+    max-height: 250px; /* Adjust as needed */
+    object-fit: cover;
 }
 
 .container {
     margin-top: 84px;
 }
 
+.navbar, footer {
+    background-color: #b69cd9;
+}
+
+.navbar-brand {
+    margin-right: 0;
+}
+
+.navbar img {
+    width: auto;
+    height: 40px;
+    border: 0;
+}
+
+.jumbotron {
+    position: relative;
+    background-image: url("img/jumbotron.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+    margin-bottom: 0;
+}
+
 footer {
     width: 100%;
-    background-color: #f8f9fa;
     padding: 1rem;
     margin-top: auto;
+}
+
+.container .best-sellers {
+    text-align: center;
+}
+
+.best-sellers {
+    color: #544569;
+    margin-bottom: 40px;
+    margin-top: 40px;
+}
+
+.home {
+    background-color: #b69cd9;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    margin-top: 0;
+}
+
+.home p {
+    text-align: left;
+    top: auto;
+    margin-right: 45px;
+}
+
+.home-background {
+    background-color: #b69cd9;
+}
+
+.anniversary-section p {
+    margin-bottom: 20px;
+}
+
+.home .img-fluid {
+    border-radius: 10px;
+    margin-left: 45px;
+    max-height: 480px;
+    height: 390px;
+    width: auto;
+}
+
+.img-fluid {
+    width: 125px;
+    height: 125px;
+}
+
+footer p {
+    margin: 0;
 }
 
 .product-category img,
@@ -38,7 +155,56 @@ footer {
 }
 
 .product-container {
-    margin: 15px;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 250px;
+}
+
+.checkout {
+    margin-bottom: 50px;
+}
+
+.most-bought img {
+    height: 256px;
+    width: auto;
+}
+
+.product-div {
+    margin: 15px 0;
+}
+
+.product-details {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.category-button {
+    background-color: #FFFFF0;
+    border-radius: 5px;
+    padding: 5px;
+    margin: 10px;
+    max-width: 200px;
+}
+
+.btn-category {
+    text-decoration: none;
+    color: #333;
+}
+
+.sidebar-sticky {
+    margin-top: 5px;
+    width: 70%;
+}
+
+.sticky-sidebar {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-color: #9fb9c3;
+    z-index: 9998;
 }
 
 textarea {
@@ -83,9 +249,25 @@ textarea {
 }
 
 .popup {
-    background: #fff;
+
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.shipping-details {
+    background-color: #b69cd9;
+    border-radius: 5px;
+    padding: 15px 15px;
+}
+
+.your-cart {
+    color: #f5f0fc;
+}
+
+#totalPrice {
+    margin-top: 10px;
+    font-size: 18px;
+    color: #544569;
 }
 
 .overlay {
@@ -140,6 +322,7 @@ select#subjectFilter option {
 .cart-container .btn {
     background-color: transparent;
     border: none;
+    margin: auto;
 }
 
 body {
@@ -171,37 +354,35 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
-.shopping-cart .container {
-    margin-top: 0px;
-}
-
 .shopping-cart .content {
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
-    background-color: white;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.075);
+    background-color: #B69CD9;
+    color: #F5F0FC;
+    border-radius: 0 0 5px 5px;
 }
 
 .shopping-cart .block-heading {
-    padding-top: 50px;
-    margin-bottom: 40px;
+    padding: 15px 0 15px 0;
+
     text-align: center;
+    background-color: #544569;
 }
 
-.shopping-cart .block-heading p {
-    text-align: center;
-    max-width: 420px;
-    margin: auto;
-    opacity: 0.7;
+.shopping-cart .block-heading {
+    border-radius: 5px 5px 0 0;
+}
+
+h2 {
+    color: #f5f0fc;
+    margin-bottom: 0;
+}
+
+.shopping-cart .block-heading h2 {
+    font-weight: bold;
 }
 
 .shopping-cart .dark .block-heading p {
     opacity: 0.8;
-}
-
-.shopping-cart .block-heading h1,
-.shopping-cart .block-heading h2,
-.shopping-cart .block-heading h3 {
-    margin-bottom: 1.2rem;
-    color: #3b99e0;
 }
 
 .shopping-cart .items {
@@ -216,21 +397,16 @@ body {
 }
 
 .shopping-cart .items .product .info {
-    padding-top: 0px;
+    padding-top: 0;
     text-align: center;
+}
+
+.shopping-cart .items .product .info p {
+    font-size: 1.5rem;
 }
 
 .shopping-cart .items .product .info .product-name {
     font-weight: 600;
-}
-
-.shopping-cart .items .product .info .product-name .product-info {
-    font-size: 14px;
-    margin-top: 15px;
-}
-
-.shopping-cart .items .product .info .product-name .product-info .value {
-    font-weight: 400;
 }
 
 .shopping-cart .items .product .info .quantity .quantity-input {
@@ -240,7 +416,7 @@ body {
 
 .shopping-cart .items .product .info .price {
     margin-top: 15px;
-    font-weight: bold;
+
     font-size: 22px;
 }
 
@@ -249,8 +425,9 @@ body {
 }
 
 .shopping-cart .summary {
-    border-top: 3px solid #5ea4f3;
-    background-color: #f7fbff;
+    border-left: 3px solid #544569;
+    font-size: 1.2rem;
+    background-color: #B69CD9;
     height: 100%;
     padding: 30px;
 }
@@ -285,18 +462,18 @@ body {
 
 @media (min-width: 768px) {
     .shopping-cart .items .product .info {
-        padding-top: 25px;
         text-align: left;
     }
 
     .shopping-cart .items .product .info .price {
-        font-weight: bold;
+
         font-size: 22px;
         top: 17px;
     }
 
     .shopping-cart .items .product .info .quantity {
         text-align: center;
+        font-size: 1.2rem;
     }
 
     .shopping-cart .items .product .info .quantity .quantity-input {
@@ -305,13 +482,6 @@ body {
     }
 }
 
-.container {
-    max-width: 960px;
-}
-
-body {
-    background-color: #eee;
-}
 
 .card {
     background-color: #fff;
@@ -348,7 +518,7 @@ body {
 
 img {
     max-width: 100%;
-    max-height: 200px;
+    max-height: 256px;
     height: auto;
     border-bottom: 1px solid #ddd;
 }
