--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -16,8 +16,10 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" th:href="@{/}">Kalium</a> Welcome, <th:block sec:authentication="name"></th:block>!
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" th:href="@{/}"><img src="http://127.0.0.1:8080/css/img/logo.png" alt="Kalium"></a> Welcome,
+        <th:block sec:authentication="name"></th:block>
+        !
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -64,7 +66,7 @@
     </nav>
 </header>
 
-<footer class="text-center py-4 bg-light">
+<footer class="text-center">
     <p>&copy; 2023 Flower Delivery</p>
 </footer>
 
