--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,9 +10,9 @@
         <div class="row">
             <div class="col-md-6 mx-auto">
                 <form class="custom-form" th:action="@{/login}" th:method="POST">
-                    <h2>Login</h2>
+                    <h2 class="text-custom-color">Login</h2>
                     <div class="form-group">
-                        <label for="email">Email address</label>
+                        <label class="text-custom-color" for="email">Email address</label>
                         <input type="email"
                                name="email"
                                th:value="*{email}"
@@ -23,7 +23,7 @@
 
                     </div>
                     <div class="form-group">
-                        <label for="password">Password</label>
+                        <label class="text-custom-color" for="password">Password</label>
                         <input type="password"
                                name="password"
 
@@ -38,7 +38,7 @@
                                class="form-check-input"
                                id="rememberme"
                                name="rememberme">
-                        <label class="form-check-label" for="rememberMe">Remember me</label>
+                        <label class="form-check-label text-custom-color" for="rememberMe">Remember me</label>
                     </div>
 
 
@@ -48,7 +48,7 @@
 
                     <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
 
-                    <button type="submit" class="btn btn-primary btn-block">Login</button>
+                    <button type="submit" class="btn btn-dark btn-block">Login</button>
                 </form>
             </div>
         </div>
