--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -19,13 +19,13 @@
 
         <div class="container">
             <div class="row justify-content-center">
-                <div th:each="message : ${messages.getAllMessages()}" class="col-md-4 mb-4 message-container justify-content-start" th:style="${'display: ' + (subjectFilter == '' || subjectFilter == message.subject ? 'block' : 'none') + '; background-color: white;'}">
+                <div th:each="message : ${messages.getAllMessages()}" class="col-md-4 mb-4 message-container justify-content-start" th:style="${'display: ' + (subjectFilter == '' || subjectFilter == message.subject ? 'block' : 'none') + ';'}">
                     <p th:text="'Full name: ' + ${message.fullName}"></p>
                     <p th:text="'Email: ' + ${message.email}"></p>
                     <p th:text="'Subject: ' + ${message.subject}"></p>
                     <p th:text="'Message: ' + ${message.message}"></p>
                     <p th:text="'Date Sent: ' + ${message.dateTimeSent}"></p>
-                    <button class="btn btn-primary reply-button " onclick="openPopup(this.previousElementSibling)">Reply</button>
+                    <button class="btn btn-dark reply-button " onclick="openPopup(this.previousElementSibling)">Reply</button>
                 </div>
             </div>
         </div>
@@ -45,7 +45,7 @@
                     <label for="replyMessage">Reply Message</label>
                     <textarea id="replyMessage" class="form-control" placeholder="Type your reply here"></textarea>
                 </div>
-                <button class="btn btn-primary" onclick="sendReply()">Send</button>
+                <button class="btn btn-dark" onclick="sendReply()">Send</button>
             </div>
         </div>
 
@@ -65,6 +65,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+<script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 
 <script th:inline="javascript">
     var subjectFilter = '';
@@ -113,11 +114,7 @@
         document.getElementById('popup').style.display = 'none';
     }
 
-    function sendReply() {
-        // You can add the logic to send the reply here
-        // For now, just close the popup
-        closePopup();
-    }
+
 </script>
 
 </body>
