--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -1,70 +1,88 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head th:replace="~{fragments/commons::head}"></head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+    <title>Flower Delivery</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/custom-background.css}"/>
+</head>
+
 <body>
 <header th:replace="~{fragments/commons::nav}"></header>
 
 <main>
-    <div class="container-fluid">
-        <div class="row">
-            <nav id="sidebar" class="col-md-3">
-                <div class="sidebar-sticky">
-                    <ul class="nav flex-column">
-                        <li class="nav-item">
-                            <form th:action="@{/products}" th:method="GET">
-                                <button type="submit" class="btn btn-link btn-category">All products</button>
-                            </form>
-                        </li>
-                        <li class="nav-item">
-                            <form th:action="@{/products/individualFlowers}" th:method="GET">
-                                <button type="submit" class="btn btn-link btn-category">Individual flowers</button>
-                            </form>
-                        </li>
-                        <li class="nav-item">
-                            <form th:action="@{/products/bouquets}" th:method="GET">
-                                <button type="submit" class="btn btn-link btn-category">Bouquets</button>
-                            </form>
-                        </li>
-                        <li class="nav-item">
-                            <form th:action="@{/products/presents}" th:method="GET">
-                                <button type="submit" class="btn btn-link btn-category">Presents</button>
-                            </form>
-                        </li>
-                        <li class="nav-item">
-                            <form th:action="@{/products/specialOffers}" th:method="GET">
-                                <button type="submit" class="btn btn-link btn-category">Special offers</button>
-                            </form>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-
-            <main role="main" class="col-md-9 ml-sm-auto col-lg-9">
-                <div class="content">
-                    <div class="row" id="product-list" th:fragment="product-list">
-                        <div th:each="product : ${products}"  class="col-md-3">
-                            <div class="product-container">
-                                <img th:src="@{'/products/images/' + ${product.id}}" th:alt="${product.name}">
+    <div class="col-md-12 sidebar d-flex justify-content-center sticky-sidebar">
+        <div class="sidebar-sticky">
+            <ul class="navbar-nav flex-row d-flex justify-content-center flex-wrap">
+                <li class="nav-item category-button">
+                    <form th:action="@{/products}" th:method="GET">
+                        <button type="submit" class="btn btn-link btn-category">All products</button>
+                    </form>
+                </li>
+                <li class="nav-item category-button">
+                    <form th:action="@{/products/individualFlowers}" th:method="GET">
+                        <button type="submit" class="btn btn-link btn-category">Individual flowers</button>
+                    </form>
+                </li>
+                <li class="nav-item category-button">
+                    <form th:action="@{/products/bouquets}" th:method="GET">
+                        <button type="submit" class="btn btn-link btn-category">Bouquets</button>
+                    </form>
+                </li>
+                <li class="nav-item category-button">
+                    <form th:action="@{/products/presents}" th:method="GET">
+                        <button type="submit" class="btn btn-link btn-category">Presents</button>
+                    </form>
+                </li>
+                <li class="nav-item category-button">
+                    <form th:action="@{/products/specialOffers}" th:method="GET">
+                        <button type="submit" class="btn btn-link btn-category">Special offers</button>
+                    </form>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="col-md-12">
+        <main role="main" class="col-md-10 ml-sm-auto col-lg-11">
+            <div class="content">
+                <div class="row" id="product-list" th:fragment="product-list">
+                    <div th:each="product : ${products}" class="col-sm-6 col-md-5 col-lg-3 product-div">
+                        <div class="product-container">
+                            <img th:src="@{'/products/images/' + ${product.id}}" th:alt="${product.name}"
+                                 class="square-image">
+                            <div class="product-details">
                                 <h2 th:text="${product.name}"></h2>
                                 <p th:text="${product.description}"></p>
                                 <p th:text="'Price: $' + ${product.price}"></p>
-                                <form th:action="@{/products/addToCart/{id}(id=${product.id})}" th:method="POST">
-                                    <button type="submit" class="btn btn-primary buy-button">Add to cart</button>
-                                </form>
                             </div>
+                            <form th:action="@{/products/addToCart/{id}(id=${product.id})}" th:method="POST">
+                                <button type="submit" class="btn btn-dark buy-button">Add to cart</button>
+                            </form>
                         </div>
                     </div>
                 </div>
-                <div th:if="${param.successMessage}" class="alert alert-success">
-                    <p th:text="${param.successMessage}"></p>
-                </div>
-            </main>
-        </div>
+            </div>
+            <div th:if="${param.successMessage}" class="alert alert-success">
+                <p th:text="${param.successMessage}"></p>
+            </div>
+        </main>
     </div>
+
 </main>
 
 <footer th:replace="~{fragments/commons::footer}"></footer>
+
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+        crossorigin="anonymous"></script>
 
 <script>
     $(document).ready(function () {
@@ -75,12 +93,10 @@
 
             sessionStorage.setItem('alertShown', 'true');
         }
+
+
     });
 </script>
-
-<script src="https://code.jquery.com/jquery-3.7.1.min.js"
-        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-        crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
