--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -9,28 +9,28 @@
         <div class="row">
             <div class="col-md-6 mx-auto">
                 <form class="custom-form" th:action="@{/register}" th:method="POST" th:object="${userRegisterBindingModel}">
-                    <h2>Register</h2>
+                    <h2 class="text-custom-color">Register</h2>
                     <div class="form-group">
-                        <label for="username">Username</label>
+                        <label class="text-custom-color" for="username">Username</label>
                         <input th:field="*{username}" th:errorclass="bg-danger" type="text" class="form-control" id="username" placeholder="Enter your username">
                         <small th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="text-danger">Username error message</small>
                     </div>
                     <div class="form-group">
-                        <label for="email">Email address</label>
+                        <label class="text-custom-color" for="email">Email address</label>
                         <input th:field="*{email}" th:errorclass="bg-danger" type="email" class="form-control" id="email" placeholder="Enter your email">
                         <small th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger">Username error message</small>
                     </div>
                     <div class="form-group">
-                        <label for="password">Password</label>
+                        <label class="text-custom-color" for="password">Password</label>
                         <input th:field="*{password}" th:errorclass="bg-danger" type="password" class="form-control" id="password" placeholder="Enter your password">
                         <small th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="text-danger">Username error message</small>
                     </div>
                     <div class="form-group">
-                        <label for="confirmPassword">Confirm Password</label>
+                        <label class="text-custom-color" for="confirmPassword">Confirm Password</label>
                         <input th:field="*{confirmPassword}" th:errorclass="bg-danger" th:classappend="${#fields.hasErrors('password')} ? 'bg-danger'"type="password" class="form-control" id="confirmPassword" placeholder="Confirm your password" >
                         <small th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}" class="text-danger">Username error message</small>
                     </div>
-                    <button type="submit" class="btn btn-primary btn-block">Register</button>
+                    <button type="submit" class="btn btn-dark btn-block">Register</button>
                 </form>
             </div>
         </div>
