--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="~{fragments/commons::head}"></head>
-<body style="background-image: url('css/img/Untitled.png');">
+<body style="background-image: url('css/img/blue-background.png');">
 <header th:replace="~{fragments/commons::nav}"></header>
 <main>
     <div class="jumbotron text-center">
